# FacialKeypointsDetection

./: .gitignore  CHANGELOG.md  FacialKeypointsDetection.py  README.md  keypoints.py  predict.py  pyproject.toml  requirements.txt  train_cnn.py  train_resnet.py
config/: default.yaml
docs/: architecture.md
keypoints/: __init__.py  config.py
keypoints/models/: __init__.py  cnn.py  resnet.py
keypoints/utils/: __init__.py  dataset.py  losses.py  visualization.py
tests/: test_models.py
